Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107607

Crash when trying to inspect "this.parent"

    XMLWordPrintable

Details

    • macOS
    • fe32f58008 (qt/qtdeclarative/dev) fe32f58008 (qt/tqtc-qtdeclarative/dev) 323b973c9e (qt/tqtc-qtdeclarative/6.2) 2e2ffdea3e (qt/qtdeclarative/6.4) 2e2ffdea3e (qt/tqtc-qtdeclarative/6.4) 323b973c9e (qt/tqtc-qtdeclarative/6.2.7)

    Description

      Setup:

      • Qt Creator 9.0, load attached project
      • Set breakpoint in main.qml, onClicked method
      • Start debugging
      • Click Button in App
      • Once debugger has interrupted, open "this" in locals view
      • Try opening "this.parent"

      Result:

      • Breakpoint is triggered in QML ( See attached backtrace ) 

      Attachments

        1. BootMe.zip
          6 kB
        2. qmlbt.txt
          24 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semih.yavuz Semih Yavuz
            madwinter Marcus Tillmanns
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes