Debugger: Initialize scoped context correctly

Initialize scopedContext with valid qmlContext. Otherwise debugger
crashes on attempt to lookup an object that includes a v4Function
property

Fixes: QTBUG-107607
Change-Id: Iea59bdf9d379a5415abe1767f76f851978b1be3f
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit fe32f58008f89b7174e9f41a781e6fba5799c026)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>