src/plugins/qmltooling/qmldbg_debugger/qv4debugjob.cpp
@@ -211,8 +211,8 @@ void ValueLookupJob::run()
     QScopedPointer<QObject> scopeObject;
     QV4::ExecutionEngine *engine = collector->engine();
     QV4::Scope scope(engine);
-    QV4::Heap::ExecutionContext *qmlContext = nullptr;
-    if (engine->qmlEngine() && !engine->qmlContext()) {
+    QV4::Heap::ExecutionContext *qmlContext = engine->qmlContext();
+    if (engine->qmlEngine() && !qmlContext) {
         scopeObject.reset(new QObject);
         qmlContext = QV4::QmlContext::create(engine->currentContext(),
                                 QQmlContextData::get(engine->qmlEngine()->rootContext()),
